# Van_Nueman_Engine

./: .gitignore  .gitmodules  AGENTS.md  BUG_REPORT.md  CMakeLists.txt  MASTER_LOG.md  README.md  build-llvm-nvptx.bat  build_engine.bat  build_msvc.bat  full_build.bat  imgui.ini  main.cpp  minimal_test.cpp  pillars.cfg  pillars.yaml  rebuild.bat  test.cpp  test_output.txt  video_demo.sh  video_demo_record.sh
PillarAIColab/: LICENSE  README.md  copilot-instructions.md  rag_store.json
Van_Nueman_Toolchain/: README.md  build-llvm-nvptx.bat
Van_Nueman_Toolchain/llvm-toolchain/: CMakeLists.txt
Van_Nueman_Toolchain/llvm-toolchain/backend/: CMakeLists.txt
Van_Nueman_Toolchain/llvm-toolchain/frontend/: AttrPillar.cpp  FractalCodeGen.cpp  PillarSema.cpp  ScaledInteger.cpp  VnCompiler.cpp
Van_Nueman_Toolchain/llvm-toolchain/include/: array  cmath  cstdint  limits  type_traits
Van_Nueman_Toolchain/llvm-toolchain/include/vn/: Attributes.h  Fractal.h  PillarTypes.h  ScaledInt.h
Van_Nueman_Toolchain/llvm-toolchain/jit/: CMakeLists.txt  NeuroevolutionJIT.cpp  VnJIT.cpp
Van_Nueman_Toolchain/llvm-toolchain/kernels/: pillars_compute.cpp
Van_Nueman_Toolchain/llvm-toolchain/passes/: FractalInlinePass.cpp  InteractionMatrixPass.cpp  LogDecayOptPass.cpp  PillarFusionPass.cpp  SVOMemoryPass.cpp  ScaledIntSimplifyPass.cpp
Van_Nueman_Toolchain/llvm-toolchain/test/: CMakeLists.txt  fractal_scale.cpp  multi_target.cpp  pillar_attributes.cpp  scaled_int.cpp
agents/: agent_info.h  agent_login.cpp  agent_login.h  cognition.cpp  cognition.h  fractal_spawner.cpp  fractal_spawner.h  memory_system.cpp  memory_system.h  perception.cpp  perception.h
api/: AI_Pillar_Prompt.md  llm_bridge.cpp  llm_bridge.h  pillar_bridge.h  pillars_api.cpp  pillars_api.cu  pillars_api.h  pillars_api_simple.cpp  rest_api.cpp  rest_api.h  skellyAPI_UniversalTerms.md  skelly_api.cpp  skelly_api.cu  skelly_api.h  skelly_api_c.cpp  skelly_api_simple.cpp  websocket_api.cpp  websocket_api.h
assets/: asset_manager.cpp  asset_manager.h  creature_predator.json
audio/: audio_system.cpp  audio_system.h  uid_pillar_matrix.h  voice_system.cpp  voice_system.h  wht.cpp  wht.h  wht_comm.cpp  wht_comm.h  wht_packet.cpp  wht_packet.h  wht_scaled.cpp  wht_scaled.h
bindings/: entity_manager.py  vulkan_wrapper.py
biology/: biological_system.cpp  biological_system.h  creature_system.cpp  creature_system.h  material_science.h  organism_types.h  society_network.h  tool_use.h  voxel_organism.cpp  voxel_organism.h  voxel_skelly_bridge.cpp  voxel_skelly_bridge.h
celestial/: CrossScaleWHTBridge.h  GravitationalSystem.h  LargeScaleStructure.h  PlanetarySystem.h  StellarSystem.h  UniversalExpansion.h
chemistry/: ChemicalBond.h  DiffusionSystem.h  EnvironmentalChemistry.h  Molecule.h  ReactionDiffusion.h  ReactionSystem.h
consciousness/: AstralProjection.h  DreamEngine.h  MetaphysicalRealms.h
database/: persistence.cpp  persistence.h  schema.sql  world_state.cpp
docs/: GAME_DEMO_DESIGN_DOCUMENT.md  GAME_LICENSE.md  PENDING_WORK.md  PITCH_DECK.md  VAN_NUEMAN_OVERVIEW.md  architecture.md  build_system.md  cpp_python_boundaries.md  dev_team.md  neural_agents.md  physics_system.md
fll/: CMakeLists.txt
fll/include/: ArenaAllocator.h  FLL.h  FLLGraphTraversal.h  FLLQPU.h  FLLRenderer.h  FLLShaders.h  FractalNode.h  QuantumSeed.h  SemanticCompiler.h  ThoughtGlyphBridge.h
fll/shaders/: fll_glyph.comp  fll_glyph.frag  fll_qpu_kernel_defs.cpp  fll_qpu_kernels.cpp  fll_resonance.cu
game_play/: crispr_vault.cpp  crispr_vault.h  drone_fleet.cpp  drone_fleet.h  emergency_console.cpp  emergency_console.h  inter_scale_feedback.cpp  inter_scale_feedback.h  relay_station.cpp  relay_station.h  simulation_chamber.cpp  simulation_chamber.h
gui/: collaboration_window.cpp  collaboration_window.h  hud.cpp  loading_screen.cpp  loading_screen.h  main_menu.cpp  main_menu.h  pillar_overlay.cpp  pillar_overlay.h  settings.cpp  settings.h  splash_screen.cpp  splash_screen.h
include/: BlochMath.h  BlochSpace.h  Constraint.h  Cord.h  Entity.h  GodNode.h  HopfPID.h  PhotonicWrapper.h  SkellyGPU.h  SkellyInstance.h  SkellyTypes.h  Transform.h  TransformCore.h
kernels/: display.frag  display_gradient.frag  fullscreen.vert  hopf_pid_compute.cpp  hopf_pid_kernel.cu  pillars_compute.cpp  pillars_compute.cu  pillars_shared.cuh  render_image.cu  render_simple.comp  render_simple2.comp  render_skelly_sdf.comp  render_svo_simple.comp  render_test.comp  render_vulkan.comp  render_vulkan.cpp  skelly_compute.cpp  skelly_compute.cu  skelly_shared.cuh  test_display.frag  transform_compute.cpp  voxel_shared.cuh  voxel_svo.cpp  voxel_svo.cu  voxel_svo.h  wht_fp_kernel.cu
llvm-config/: LLVMConfig.cmake
llvm-toolchain/: CMakeLists.txt
llvm-toolchain/backend/: CMakeLists.txt  NVPTXExtensions.cpp  SPIRVEmitter.cpp  VnTargetMachine.cpp
llvm-toolchain/frontend/: CMakeLists.txt  VnCompiler.cpp
llvm-toolchain/jit/: RuleCompiler.cpp
llvm-toolchain/kernels/: pillars_compute.cpp
llvm-toolchain/passes/: CMakeLists.txt  PillarFusionPass.cpp  SVOMemoryPass.cpp
llvm-toolchain/test/: fractal_scale.cpp  multi_target.cpp  test_spirv.cpp
mlir/vnes/: CMakeLists.txt
mlir/vnes/include/vnes/: VNESDialect.h
mlir/vnes/lib/: VNESDialect.cpp  VNESFuseSolversPass.cpp  VNESLowerToLinalg.cpp  VNESPasses.h
mlir/vnes/test/: run_tests.sh  test_darcy_flow.mlir  test_fuse_and_lower.mlir  test_lower_to_linalg.mlir  test_runner.cpp  test_vnes_dialect.mlir
mlir/vnes/tools/: vn_mlir_opt.cpp
network/: causal_handshake.cpp  causal_handshake.h  client.cpp  federated.cpp  federation.h  feedback_loops.cpp  protocol.cpp  protocol.h  server.cpp
neuro/: entity_neural_net.comp  entity_neural_net.cpp  entity_neural_net.h
neuroevolution/: boundaries.cpp  fitness.cpp  neuroevolution.h  operators.cpp  organism_fitness.cpp  organism_fitness.h  population.cpp  voxel_crispr_bridge.cpp  voxel_crispr_bridge.h  voxel_neuro_bridge.cpp  (+1 more)
vnes/python/: pyproject.toml  setup.py
vnes/python/src/: bindings.cpp
vnes/python/vnes/: __init__.py  cli.py  generator.py  lattice.py  metadata.py
(+598 files in other folders)
